--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>HTML5响应式第三方登录页面模板</title>
+	<title>登录</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="" /> 
 	<script src="js/Bmob-2.2.4.min.js"></script>
@@ -19,7 +19,7 @@
 		Bmob.debug(true);
 		function login(){
 		 Bmob.User.login(document.getElementById("username").value,document.getElementById("pwd").value).then(res => {
-		   location.href="https://ahehe2505.github.io/blog/";
+		   location.href="https://ahehe2505.github.io/boke/";
 		 }).catch(err => {
 		  alert(err.error)
 		});	
